fix issues with images on safari

--- a/src/_blog-posts.scss
+++ b/src/_blog-posts.scss
@@ -33,6 +33,12 @@
         margin: 8px 0;
       }
 
+      img {
+        height: 200px;
+        width: 100%;
+        object-fit: cover;
+      }
+
       h3 {
         a {
           color: $color-font;
